crates/arklib_meta/tests/ui/intervention_no_layers.rs
use arklib_meta::intervention;

pub type LayerId = usize;

#[intervention]
pub fn my_intervention() -> Result<(), ()> {
    Ok(())
}

fn main() {}
